initial changes for tests without NSO and deps
Signed-off-by: Martin Volf <mvolf@cisco.com>

--- a/test/unit/tox.ini
+++ b/test/unit/tox.ini
@@ -10,5 +10,4 @@ skipsdist = True
 [testenv]
 commands = pytest
 deps = -rrequirements.txt
-passenv = NCS_DIR
-setenv = PYTHONPATH = {env:NCS_DIR:}/src/ncs/pyapi:../../python:../../drned-skeleton
+setenv = PYTHONPATH = ../../python:../../drned-skeleton
