--- a/.github/workflows/drned-xmnr-unit.yml
+++ b/.github/workflows/drned-xmnr-unit.yml
@@ -18,7 +18,7 @@ jobs:
       XMNR_DIR: .
     strategy:
       matrix:
-        python-version: [ '3.10', '3.9', '3.8', '3.7', '3.6', '2.7' ]
+        python-version: [ '3.10', '3.9', '3.8', '3.7', '3.6' ]
     name: Python ${{ matrix.python-version }}
     steps:
       - uses: actions/checkout@v2
