--- a/test/unit/tox.ini
+++ b/test/unit/tox.ini
@@ -4,7 +4,7 @@
 # and then run "tox" from this directory.
 
 [tox]
-envlist = py27, py36, py38, py39, py310
+envlist = py36, py38, py39, py310
 skipsdist = True
 
 [testenv]
