--- a/.github/workflows/drned-xmnr-unit.yml
+++ b/.github/workflows/drned-xmnr-unit.yml
@@ -53,7 +53,7 @@ jobs:
           COVERALLS_FLAG_NAME: ${{ matrix.python-version }}
           COVERALLS_PARALLEL: true
         run: |
-          coveralls
+          coveralls --service=github
 
 
   coveralls:
