--- a/.github/workflows/drned-xmnr-unit.yml
+++ b/.github/workflows/drned-xmnr-unit.yml
@@ -35,10 +35,7 @@ jobs:
           python -m pip install coverage coveralls
       - name: Lint with flake8
         run: |
-          # stop the build if there are Python syntax errors or undefined names
-          flake8 ${XMNR_DIR}/python ${XMNR_DIR}/test/unit/ --count --max-line-length=120 --show-source --statistics
-          # exit-zero treats all errors as warnings. The GitHub editor is 127 chars wide
-          flake8 ${XMNR_DIR}/python ${XMNR_DIR}/test/unit/ --count --exit-zero --max-complexity=25 --max-line-length=120 --statistics
+          ./flake8-check.sh
       - name: Type check with mypy
         run: |
           python -m pip install mypy
