fixed coveralls upload
Signed-off-by: Martin Volf <mvolf@cisco.com>

--- a/.github/workflows/drned-xmnr-unit.yml
+++ b/.github/workflows/drned-xmnr-unit.yml
@@ -50,7 +50,7 @@ jobs:
           COVERALLS_FLAG_NAME: ${{ matrix.python-version }}
           COVERALLS_PARALLEL: true
         run: |
-          coveralls --service=github
+          coveralls
 
 
   coveralls:
